--- a/src/assets/scss/core/layout/_header.scss
+++ b/src/assets/scss/core/layout/_header.scss
@@ -1,10 +1,10 @@
 .site-header {
-	position: absolute !important;
+	position: fixed !important;
 	top: 0;
 	width: 100%;
-	z-index: 10 !important;
-	background: color-bg(header);
-
+	z-index: 10 ;
+	background-color: rgba(235, 233, 233, 0.6);
+	box-shadow: 0px 5px 5px #27272780;
 	+ .site-content {
 
 		.section:first-of-type {
@@ -97,8 +97,9 @@
 			left: 0;
 			right: 0;
 			top: 100%;
-			z-index: 9999;
-			background: color-bg(menu-mobile);
+			z-index: 1;
+				background-color: rgba(255,255,255,1);
+			// background: color-bg(menu-mobile)!important;
 			max-height: 0;
 	        opacity: 0;
 	        overflow: hidden;
